[tool.poetry]
name = "hw-5"
version = "0.1.0"
description = ""
authors = ["Anastasia <ashevchenko629@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_5"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
